--- a/app/src/main/res/layout/activity_messager.xml
+++ b/app/src/main/res/layout/activity_messager.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:onClick="clickedProfile"
-        android:text="Button"
+        android:text="Profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
