--- a/app/src/main/res/layout/list_contacts.xml
+++ b/app/src/main/res/layout/list_contacts.xml
@@ -19,14 +19,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgAvatar"
+            android:id="@+id/imgPhoto"
             android:layout_width="50dp"
             android:layout_height="50dp"
             tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
