--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <!-- BUBBLE BACKGROUNDS -->
+    <color name="bg_incomingMessage">#FFF59D</color>
+    <color name="bg_outgoingMessage">#80DEEA</color>
 </resources>
