Home activity reading conversations and displaying with recycler view

--- a/app/src/main/res/layout/activity_messji.xml
+++ b/app/src/main/res/layout/activity_messji.xml
@@ -6,15 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MessjiActivity">
 
-    <ListView
-        android:id="@+id/listContacts"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btnSettings"
         android:layout_width="wrap_content"
@@ -22,7 +13,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:onClick="openSettings"
-        android:text="Settings"
+        android:text="Profile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -36,4 +27,16 @@
         android:text="Messenger"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/heregoesthething"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
