--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -9,7 +9,7 @@
     android:focusableInTouchMode="true"
     tools:context=".MessengerActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/messages_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
