--- a/app/src/main/res/layout/activity_messji.xml
+++ b/app/src/main/res/layout/activity_messji.xml
@@ -6,16 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MessjiActivity">
 
-    <Button
-        android:id="@+id/btnSettings"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButtonNewMessage"
+        style="@style/Widget.Design.FloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        app:backgroundTint="@color/ic_launcher_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_message" />
+
+    <Button
+        android:id="@+id/btnSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
         android:onClick="openSettings"
         android:text="Profile"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/btnMessenger" />
 
     <Button
         android:id="@+id/btnMessenger"
@@ -36,7 +50,9 @@
         android:layout_marginEnd="0dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
+        app:layout_constraintStart_toStartOf="parent">
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
